# SO

./: .gitignore  main.cpp
code/: .gitignore  CMakeLists.txt  main.cpp  operations.cpp  process.cpp  programa  prueba.txt  structures.h  usuarios.txt
code/Calc/: operations.cpp  operations.h
code/Clock/: clock.cpp  clock.h
code/Generador/: generadorDatos.cpp  generadorDatos.h
code/Interface/: mainwindow.cpp  mainwindow.h
code/Process/: process.cpp  process.h
code/Queue/: queue.cpp  queue.h
code/Scheduler/: scheduler.cpp  scheduler.h
code/Structure/: structures.cpp  structures.h
code/TablaBCP/: bcpwindow.cpp  bcpwindow.h
code/TablaMemoria/: memorywindow.cpp  memorywindow.h
code/queue/: queue.c  queue.h
productor-consumidor/: main  main.cpp
productor-consumidor/Constants/: constants.h
work/: LopezMelanieD05ActPuntoExtra.docx  Tarea1.docx  instrucciones - copia.txt
